Home contact tab navigation create, style fix index.js tabNav logic create, minnor alignment in style fix

--- a/src/style.css
+++ b/src/style.css
@@ -74,9 +74,8 @@ nav {
 /* Contact Page */
 
 #contact-page {
-    height: auto;
-    padding: 35px;
     align-items: normal;
+    align-content: center;
 }
 
 #contact-page textarea {
